[tool.poetry]
name = "goxlr_utility"
version = "0.0.0"
description = "GoXLR Utility integration for Home Assistant"
authors = ["Aidan Timson <aidan@timmo.dev>"]
maintainers = ["Aidan Timson <aidan@timmo.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/timmo001/homeassistant-integration-goxlr-utility"
repository = "https://github.com/timmo001/homeassistant-integration-goxlr-utility"
documentation = "https://github.com/timmo001/homeassistant-integration-goxlr-utility"
package-mode = false
classifiers = [
    "Framework :: AsyncIO",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
homeassistant = ">=2025.3"
goxlrutil-api = "0.0.2"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
pre-commit = "4.5.1"
pre-commit-hooks = "6.0.0"
pylint = "4.0.5"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/timmo001/homeassistant-integration-goxlr-utility/issues"
Changelog = "https://github.com/timmo001/homeassistant-integration-goxlr-utility/releases"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by black
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
disable = [
    "duplicate-code",
    "format",
    "too-many-ancestors",
    "too-many-instance-attributes",
    "used-before-assignment",
]
